--- a/app/src/main/res/layout/child_fragment_notice.xml
+++ b/app/src/main/res/layout/child_fragment_notice.xml
@@ -52,6 +52,7 @@
             android:text="작성된 글이 없어요."/>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_writing"
             android:layout_width="96dp"
             android:layout_height="36dp"
             android:textStyle="bold"
