--- a/app/src/main/res/layout/activity_setting_alarm.xml
+++ b/app/src/main/res/layout/activity_setting_alarm.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#f8f8f8">
+    android:background="#ffffff">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
@@ -55,6 +55,7 @@
     </View>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_set_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,6 +83,7 @@
         android:layout_marginHorizontal="24dp">
 
         <RelativeLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:animateLayoutChanges="true"
@@ -145,6 +147,56 @@
         </RelativeLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/rl_preparing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <ImageView
+            android:id="@+id/iv_prepare"
+            android:layout_gravity="center"
+            android:src="@drawable/img_preparing"
+            android:background="@null"
+            android:layout_width="68dp"
+            android:layout_height="68dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:fontFamily="sans-serif"
+            android:layout_marginTop="14dp"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:textColor="#343434"
+            android:letterSpacing="-0.01"
+            android:lineSpacingExtra="-3sp"
+            android:gravity="center_horizontal"
+            android:text="준비중인 기능입니다."/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="normal"
+            android:textSize="14sp"
+            android:textColor="#a3a3a3"
+            android:letterSpacing="-0.03"
+            android:lineSpacingExtra="6sp"
+            android:layout_marginTop="12dp"
+            android:gravity="center_horizontal"
+            android:text="다음 업데이트에서 만나요!"/>
+
+
+    </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
