[STYLE] 런칭데이 미구현 버튼 및 화면 숨기기

--- a/app/src/main/res/layout/child_fragment_together.xml
+++ b/app/src/main/res/layout/child_fragment_together.xml
@@ -136,6 +136,7 @@
 
                 <RelativeLayout
                     android:id="@+id/rl_done_person_cnt"
+                    android:visibility="invisible"
                     android:layout_width="39dp"
                     android:layout_height="24dp"
                     android:layout_marginTop="36dp"
