[FIX] 홈화면 > 관리자 미확인 데이터 삭제 완료

--- a/app/src/main/res/layout/item_vp_home_communicate.xml
+++ b/app/src/main/res/layout/item_vp_home_communicate.xml
@@ -8,6 +8,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_new"
+        android:visibility="gone"
         android:layout_width="35dp"
         android:layout_height="17dp"
         android:background="@drawable/rectangle_fill_light_red_radius_4"
