--- a/app/src/main/res/layout/activity_add_togehter_work_list.xml
+++ b/app/src/main/res/layout/activity_add_togehter_work_list.xml
@@ -46,7 +46,6 @@
 
             <TextView
                 android:id="@+id/tv_next"
-                android:enabled="false"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
@@ -54,7 +53,7 @@
                 android:layout_marginEnd="16dp"
                 android:letterSpacing="-0.03"
                 android:text="완료"
-                android:textColor="#adadad"
+                android:textColor="#ffc400"
                 android:textSize="16sp"
                 android:textStyle="normal" />
 
