--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,7 @@
                     android:layout_marginTop="36dp"
                     android:layout_marginStart="24dp"/>
                 <TextView
+                    android:id="@+id/tv_show_community"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="normal"
