--- a/app/src/main/res/layout/dialog_fragment_notice_menu_for_w.xml
+++ b/app/src/main/res/layout/dialog_fragment_notice_menu_for_w.xml
@@ -39,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <TextView
+                android:id="@+id/tv_menu_one"
                 android:text="신고하기"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
