--- a/app/src/main/res/layout/item_rv_done_check_together.xml
+++ b/app/src/main/res/layout/item_rv_done_check_together.xml
@@ -18,6 +18,8 @@
         android:textColor="#a3a3a3"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/checkbox_finish"
         app:layout_constraintStart_toStartOf="parent"
