--- a/app/src/main/res/layout/item_rv_worker_cnt_pop_up.xml
+++ b/app/src/main/res/layout/item_rv_worker_cnt_pop_up.xml
@@ -8,9 +8,7 @@
     <ImageView
         android:id="@+id/iv_profile"
         android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@color/mainYellow"
-        />
+        android:layout_height="24dp"/>
 
     <TextView
         android:id="@+id/tv_position"
