--- a/app/src/main/res/layout/item_vp_home_communicate.xml
+++ b/app/src/main/res/layout/item_vp_home_communicate.xml
@@ -18,6 +18,7 @@
         android:layout_marginStart="16dp">
 
         <TextView
+            android:id="@+id/tv_did_read"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="미확인"
