--- a/app/src/main/res/layout/dialog_fragment_notice_menu_for_m.xml
+++ b/app/src/main/res/layout/dialog_fragment_notice_menu_for_m.xml
@@ -59,7 +59,7 @@
             android:background="@drawable/bg_selector_type"
             android:layout_height="0dp">
             <TextView
-                android:text="신고하기"
+                android:text="삭제하기"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
