[STYLE] 근무자 > 할 일 텍스트 변경

--- a/app/src/main/res/layout/child_fragment_home_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_opened.xml
@@ -857,6 +857,7 @@
             android:id="@+id/progressBar_together"
             android:layout_width="167dp"
             android:layout_height="8dp"
+            android:scaleY="1.5"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="24dp"
             android:progress="70"
@@ -941,6 +942,7 @@
             android:id="@+id/progressBar_alone"
             android:layout_width="167dp"
             android:layout_height="8dp"
+            android:scaleY="1.5"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="24dp"
             android:progress="70"
