--- a/app/src/main/res/layout/activity_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_add_worker_one.xml
@@ -69,13 +69,15 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tb_late">
+        app:layout_constraintTop_toBottomOf="@id/tb_late"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
-            android:animateLayoutChanges="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -110,7 +112,7 @@
                     android:stateListAnimator="@null"
                     android:text="알바생"
                     android:textColor="#6f6f6f"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_select_rank_title" />
 
@@ -126,7 +128,7 @@
                     android:paddingVertical="8dp"
                     android:text="직원"
                     android:textColor="#6f6f6f"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     app:layout_constraintStart_toEndOf="@id/btn_alba"
                     app:layout_constraintTop_toBottomOf="@id/tv_select_rank_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -163,6 +165,7 @@
                         android:id="@+id/btn_weekday"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+
                         android:layout_marginTop="16dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -429,11 +432,11 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_visible_layout"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="24dp">
+                android:layout_marginTop="24dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_go_work"
@@ -614,8 +617,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
-                android:paddingBottom="30dp"
-                android:layout_marginTop="36dp">
+                android:layout_marginTop="36dp"
+                android:paddingBottom="30dp">
 
                 <TextView
                     android:id="@+id/tv_pay_day"
@@ -697,16 +700,16 @@
 
                         <EditText
                             android:id="@+id/et_payment"
-                            android:background="@null"
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:inputType="number"
-                            android:maxLength="15"
                             android:layout_marginEnd="8dp"
                             android:layout_toStartOf="@id/tv_pay_unit"
+                            android:background="@null"
                             android:gravity="end"
+                            android:inputType="number"
                             android:letterSpacing="-0.03"
+                            android:maxLength="15"
                             android:textColor="#343434"
                             android:textSize="18sp"
                             android:textStyle="bold" />
