--- a/app/src/main/res/layout/item_rv_personal_work_list.xml
+++ b/app/src/main/res/layout/item_rv_personal_work_list.xml
@@ -77,6 +77,7 @@
             android:id="@+id/progressBar_together"
             android:layout_width="167dp"
             android:layout_height="8dp"
+            android:scaleY="1.5"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="24dp"
             android:progress="70"
