[STYLE] 근무자추가 버튼 가운데 정렬 완료

--- a/app/src/main/res/layout/activity_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_add_worker_one.xml
@@ -105,6 +105,7 @@
                     android:layout_width="55dp"
                     android:layout_height="31dp"
                     android:layout_marginTop="16dp"
+                    android:gravity="center"
                     android:background="@drawable/bg_selector_rest_long"
                     android:letterSpacing="-0.02"
                     android:lineSpacingExtra="0sp"
@@ -120,6 +121,7 @@
                     android:id="@+id/btn_staff"
                     android:layout_width="44dp"
                     android:layout_height="31dp"
+                    android:gravity="center"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/bg_selector_rest_long"
@@ -165,7 +167,7 @@
                         android:id="@+id/btn_weekday"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
-
+                        android:gravity="center"
                         android:layout_marginTop="16dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -179,6 +181,7 @@
                         android:id="@+id/btn_weekend"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="16dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -193,6 +196,7 @@
                         android:id="@+id/btn_manager"
                         android:layout_width="55dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="16dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -207,6 +211,7 @@
                         android:id="@+id/btn_store_manager"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="16dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -230,6 +235,7 @@
                         android:id="@+id/btn_open"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
                         android:letterSpacing="-0.02"
@@ -243,6 +249,7 @@
                         android:id="@+id/btn_middle"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -257,6 +264,7 @@
                         android:id="@+id/btn_end"
                         android:layout_width="44dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -317,6 +325,7 @@
                         android:id="@+id/btn_mon"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
                         android:letterSpacing="-0.02"
@@ -330,6 +339,7 @@
                         android:id="@+id/btn_tue"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -344,6 +354,7 @@
                         android:id="@+id/btn_wen"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -358,6 +369,7 @@
                         android:id="@+id/btn_thur"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -373,6 +385,7 @@
                         android:id="@+id/btn_fri"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -387,6 +400,7 @@
                         android:id="@+id/btn_sat"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -401,6 +415,7 @@
                         android:id="@+id/btn_sun"
                         android:layout_width="31dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_oval"
@@ -415,6 +430,7 @@
                         android:id="@+id/btn_rotate"
                         android:layout_width="65dp"
                         android:layout_height="31dp"
+                        android:gravity="center"
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/bg_selector_rest_long"
@@ -424,7 +440,6 @@
                         android:text="교대근무"
                         android:textColor="#6f6f6f"
                         android:textSize="12sp" />
-
                 </LinearLayout>
 
 
