--- a/app/src/main/res/layout/activity_notice_content.xml
+++ b/app/src/main/res/layout/activity_notice_content.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f8f8f8"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_top_bar"
         android:background="@color/white"
@@ -59,145 +63,165 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_written_area"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:overScrollMode="never"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_writer_profile"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            tools:src="@color/mainYellow"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="24dp"/>
-
-        <TextView
-            android:id="@+id/tv_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="사장님"
-            app:layout_constraintStart_toEndOf="@id/iv_writer_profile"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp"
-            android:textStyle="normal"
-            android:textSize="14sp"
-            android:textColor="#ff8700"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="6sp"
-            android:layout_marginStart="8dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:textStyle="normal"
-            android:textSize="16sp"
-            android:textColor="#333333"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="6sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_writer_profile"
-            app:layout_constraintStart_toStartOf="@id/tv_position"
-            app:layout_constraintTop_toBottomOf="@id/tv_position"
-            tools:text="김형준"/>
-
-        <TextView
-            android:id="@+id/tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="#333333"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="1sp"
-            tools:text="코로나 관련 매장 관리 공지 "
-            app:layout_constraintStart_toStartOf="@id/iv_writer_profile"
-            app:layout_constraintTop_toBottomOf="@id/iv_writer_profile"
-            android:layout_marginTop="24dp"
-            android:layout_marginHorizontal="24dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            android:layout_marginTop="12dp"
-            android:layout_marginHorizontal="24dp"
-            tools:text="📢출입자 명부\n\n출입자명부 작성 철저하게 해주세요!
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_written_area"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/iv_writer_profile"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    tools:src="@color/mainYellow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="24dp"/>
+
+                <TextView
+                    android:id="@+id/tv_position"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="사장님"
+                    app:layout_constraintStart_toEndOf="@id/iv_writer_profile"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:textStyle="normal"
+                    android:textSize="14sp"
+                    android:textColor="#ff8700"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="6sp"
+                    android:layout_marginStart="8dp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-medium"
+                    android:textStyle="normal"
+                    android:textSize="16sp"
+                    android:textColor="#333333"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="6sp"
+                    app:layout_constraintBottom_toBottomOf="@id/iv_writer_profile"
+                    app:layout_constraintStart_toStartOf="@id/tv_position"
+                    app:layout_constraintTop_toBottomOf="@id/tv_position"
+                    tools:text="김형준"/>
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="#333333"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="1sp"
+                    tools:text="코로나 관련 매장 관리 공지 "
+                    app:layout_constraintStart_toStartOf="@id/iv_writer_profile"
+                    app:layout_constraintTop_toBottomOf="@id/iv_writer_profile"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginHorizontal="24dp"/>
+
+                <TextView
+                    android:id="@+id/tv_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginHorizontal="24dp"
+                    tools:text="📢출입자 명부\n\n출입자명부 작성 철저하게 해주세요!
 주문 받은 뒤, 홀 손님에겐 꼭 명부작성 권유 해야합니다.
 테이크아웃 손님은 매장에 들어와서 주문시에 권유 해주세요!"/>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_notice_image_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:layout_marginBottom="78dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/tv_content"
-            app:layout_constraintStart_toStartOf="@id/tv_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_content" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_notice_image_list"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="48dp"
+                    android:layout_marginBottom="78dp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/tv_content"
+                    app:layout_constraintStart_toStartOf="@id/tv_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_content" />
 
-        <RelativeLayout
-            android:id="@+id/rl_read_person_cnt"
-            android:layout_width="39dp"
-            android:layout_height="24dp"
-            android:background="@drawable/bg_selector_done_cnt"
-            app:layout_constraintStart_toStartOf="@id/tv_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp">
-            <ImageView
-                android:layout_width="13dp"
-                android:layout_height="17dp"
-                android:background="@null"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="7dp"
-                android:src="@drawable/ic_man_17_px"/>
-            <TextView
-                android:id="@+id/tv_done_person_cnt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="6dp"
-                android:textStyle="normal"
-                android:textSize="14sp"
-                android:textColor="#6f6f6f"
-                android:letterSpacing="-0.02"
-                android:lineSpacingExtra="28sp"/>
-        </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/rl_read_person_cnt"
+                    android:layout_width="39dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/bg_selector_done_cnt"
+                    app:layout_constraintStart_toStartOf="@id/tv_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="24dp">
+                    <ImageView
+                        android:layout_width="13dp"
+                        android:layout_height="17dp"
+                        android:background="@null"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="7dp"
+                        android:src="@drawable/ic_man_17_px"/>
+                    <TextView
+                        android:id="@+id/tv_done_person_cnt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="6dp"
+                        android:textStyle="normal"
+                        android:textSize="14sp"
+                        android:textColor="#6f6f6f"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingExtra="28sp"/>
+                </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_wrote_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="normal"
-            android:textSize="12sp"
-            android:textColor="#a3a3a3"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="0sp"
-            android:gravity="end"
-            tools:text="2021. 08. 30."
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="24dp"
-            android:layout_marginEnd="24dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/tv_wrote_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="normal"
+                    android:textSize="12sp"
+                    android:textColor="#a3a3a3"
+                    android:letterSpacing="-0.02"
+                    android:lineSpacingExtra="0sp"
+                    android:gravity="end"
+                    tools:text="2021. 08. 30."
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginEnd="24dp"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
