--- a/app/src/main/res/layout/activity_work_done.xml
+++ b/app/src/main/res/layout/activity_work_done.xml
@@ -77,7 +77,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
-                android:text="완료한 업무"
+                android:text="업무 기록"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
