--- a/app/src/main/res/layout/item_rv_undone_check.xml
+++ b/app/src/main/res/layout/item_rv_undone_check.xml
@@ -78,6 +78,7 @@
         android:textStyle="normal"
         android:textSize="11sp"
         android:gravity="end"
+        android:layout_marginEnd="16dp"
         android:paddingEnd="13dp"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.02"
