--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -128,5 +128,13 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <!-- 탭 레이아웃(오늘의 할일) 텍스트 -->
+    <style name="MineCustomTabText" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">16sp</item>
+        <item name="lineSpacing">-0.02dp</item>
+        <item name="android:lineSpacingExtra">3sp</item>
+    </style>
+
+
 </resources>
 
