[FIX] 퇴근 후 QR 로직 변경

--- a/app/src/main/res/layout/activity_qr_scan.xml
+++ b/app/src/main/res/layout/activity_qr_scan.xml
@@ -67,6 +67,7 @@
         android:layout_marginTop="64dp">
 
         <TextView
+            android:id="@+id/tv_scan_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
