--- a/app/src/main/res/layout/activity_add_worker_one.xml
+++ b/app/src/main/res/layout/activity_add_worker_one.xml
@@ -21,6 +21,7 @@
             android:background="@color/white">
 
             <ImageButton
+                android:id="@+id/btn_back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_centerVertical="true"
