--- a/app/src/main/res/layout/child_fragment_home_w_opened.xml
+++ b/app/src/main/res/layout/child_fragment_home_w_opened.xml
@@ -360,6 +360,7 @@
             android:id="@+id/progressBar_together"
             android:layout_width="167dp"
             android:layout_height="8dp"
+            android:scaleY="1.5"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="24dp"
             android:progress="70"
@@ -445,6 +446,7 @@
             android:id="@+id/progressBar_alone"
             android:layout_width="167dp"
             android:layout_height="8dp"
+            android:scaleY="1.5"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="24dp"
             android:progress="70"
