[STYLE] 오늘의 할 일 화면 텍스트 수정

--- a/app/src/main/res/layout/child_fragment_personal.xml
+++ b/app/src/main/res/layout/child_fragment_personal.xml
@@ -7,6 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_personal_work"
+        android:overScrollMode="never"
         tools:listitem="@layout/item_rv_personal_work_list"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
