--- a/app/src/main/res/layout/item_rv_personal_work_list.xml
+++ b/app/src/main/res/layout/item_rv_personal_work_list.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="16dp"
     android:layout_marginHorizontal="24dp"
     android:id="@+id/cl_root"
@@ -30,19 +31,39 @@
                 android:background="@null"/>
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_together"
+        <LinearLayout
+            android:id="@+id/ll_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:textColor="#333333"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="24sp"
+            android:orientation="horizontal"
             android:layout_toEndOf="@id/rl_img"
             android:layout_marginTop="32dp"
-            android:layout_marginStart="21dp"
-            android:text="평일오픈업무"/>
+            android:layout_marginStart="21dp">
+
+            <TextView
+                android:id="@+id/tv_together"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="normal"
+                android:textSize="18sp"
+                android:textColor="#ffb100"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="24sp"
+                tools:text="평일오픈"/>
+
+            <TextView
+                android:id="@+id/tv_worker_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="#333333"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="24sp"
+                tools:text="카이트"/>
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/tv_total_cnt_togehter"
@@ -86,7 +107,7 @@
             android:layout_marginStart="23dp"
             android:background="@null"
             android:layout_toEndOf="@id/rl_img"
-            android:layout_below="@id/tv_together"
+            android:layout_below="@id/ll_text"
             android:progressDrawable="@drawable/custom_progress_bar_work_list"
             style="@android:style/Widget.ProgressBar.Horizontal"/>
     </RelativeLayout>
