--- a/app/src/main/res/layout/fragment_m_community.xml
+++ b/app/src/main/res/layout/fragment_m_community.xml
@@ -120,15 +120,38 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <com.github.clans.fab.FloatingActionButton
+    <FrameLayout
         android:id="@+id/float_writing_btn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/ic_edit_floating"
-        app:fab_colorNormal="#ffd85c"
-        app:fab_colorPressed="@color/mainYellow"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"/>
+        android:layout_width="100dp"
+        android:layout_height="44dp"
+        android:background="@drawable/rectangle_fill_yellow_radius_23_with_outline"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center|bottom">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit_18_px"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginStart="6dp"
+                android:textStyle="normal"
+                android:textSize="14sp"
+                android:textColor="#343434"
+                android:letterSpacing="-0.01"
+                android:lineSpacingExtra="10sp"
+                android:gravity="center_horizontal"
+                android:text="글쓰기"/>
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
