--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
         android:text="로그인"
-        android:textColor="@color/subTxtColor"
+        android:textColor="@color/customBlack"
         android:textSize="16sp"
         android:textStyle="bold"
         android:stateListAnimator="@null"
