[STYLE] 오늘의 할 일 탭에 그림자 없애기 -> 깔끔한 UI

--- a/app/src/main/res/layout/activity_home_today_todo_list.xml
+++ b/app/src/main/res/layout/activity_home_today_todo_list.xml
@@ -76,6 +76,7 @@
             app:tabIndicatorHeight="54dp"
             app:tabInlineLabel="true"
             app:tabMode="fixed"
+            app:tabRippleColor="@null"
             app:tabSelectedTextColor="@color/white"
             app:tabTextColor="#a3a3a3" />
     </FrameLayout>
